# watcher

./: flake.nix  pyproject.toml  watcher.py
watcher-server/: Cargo.toml
watcher-server/src/: config.rs  handler.rs  job.rs  main.rs  state.rs  websocket.rs
