[tool.poetry]
name = "watcher"
version = "0.1.0"
description = ""
authors = ["marcustut <marcustutorial@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests5 = "^1.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
