[package]
name = "watcher-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1.38.0", features = ["rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7.11" }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
async-trait = { version = "0.1" }

# Web framework
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-client-ip = { version = "0.6.0" }
hyper = { version = "1.1.0", features = [] }
hyper-util = { version = "0.1.2", features = ["tokio", "server-auto", "http1"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.5.2", features = [
    "timeout",
    "trace",
    "cors",
    "fs",
] }

# Request
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Tracing
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# SerDe
serde = { version = " 1.0" }
serde_json = { version = " 1.0" }

# Utils
dotenvy = { version = "0.15.7" }
clap = { version = "4.5.8", features = ["derive", "env"] }
